tests/snapshots/regression/semantic_types__modules__private_member__main.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/modules/private_member/main.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  String
[10 of 11] Compiling  Math
• 1 error • tests/fixtures/semantic_types/modules/private_member/main.flx
error[E011]: Private Member

Cannot access private member `hidden`.

  tests/fixtures/semantic_types/modules/private_member/main.flx:4:5
  |
4 |     M.hidden(1)
  |     ^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
